changes based on word document

--- a/about.html
+++ b/about.html
@@ -70,9 +70,6 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> Distributed by: <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> <span>Demo Images: <a href="http://nothingtochance.co/" target="_blank">nothingtochance.co</a></span></small></p>
 				<ul>
 					<li><a target="_blank" title="Facebook" href="https://www.facebook.com/profile.php?id=61560947136736&mibextid=ZbWKwL"><i class="icon-facebook2"></i></a></li>
 					<li style="position: relative; top:5px; margin-right: 3px;"><a title="Trip Advisor" target="_blank" href="https://www.tripadvisor.com/Attraction_Review-g227662-d27967056-Reviews-Art_Leone-Letojanni_Province_of_Messina_Sicily.html"><svg style="width: 25px;" viewBox="0 -96 512.2 512.2" id="Layer_2" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><style>.st0{fill:#ffffff65}</style><path class="st0" d="M128.2 127.9C92.7 127.9 64 156.6 64 192c0 35.4 28.7 64.1 64.1 64.1 35.4 0 64.1-28.7 64.1-64.1.1-35.4-28.6-64.1-64-64.1zm0 110c-25.3 0-45.9-20.5-45.9-45.9s20.5-45.9 45.9-45.9S174 166.7 174 192s-20.5 45.9-45.8 45.9z"></path><circle class="st0" cx="128.4" cy="191.9" r="31.9"></circle><path class="st0" d="M384.2 127.9c-35.4 0-64.1 28.7-64.1 64.1 0 35.4 28.7 64.1 64.1 64.1 35.4 0 64.1-28.7 64.1-64.1 0-35.4-28.7-64.1-64.1-64.1zm0 110c-25.3 0-45.9-20.5-45.9-45.9s20.5-45.9 45.9-45.9S430 166.7 430 192s-20.5 45.9-45.8 45.9z"></path><circle class="st0" cx="384.4" cy="191.9" r="31.9"></circle><path class="st0" d="M474.4 101.2l37.7-37.4h-76.4C392.9 29 321.8 0 255.9 0c-66 0-136.5 29-179.3 63.8H0l37.7 37.4C14.4 124.4 0 156.5 0 192c0 70.8 57.4 128.2 128.2 128.2 32.5 0 62.2-12.1 84.8-32.1l43.4 31.9 42.9-31.2-.5-1.2c22.7 20.2 52.5 32.5 85.3 32.5 70.8 0 128.2-57.4 128.2-128.2-.1-35.4-14.6-67.5-37.9-90.7zM368 64.8c-60.7 7.6-108.3 57.6-111.9 119.5-3.7-62-51.4-112.1-112.3-119.5 30.6-22 69.6-32.8 112.1-32.8S337.4 42.8 368 64.8zM128.2 288.2C75 288.2 32 245.1 32 192s43.1-96.2 96.2-96.2 96.2 43.1 96.2 96.2c-.1 53.1-43.1 96.2-96.2 96.2zm256 0c-53.1 0-96.2-43.1-96.2-96.2s43.1-96.2 96.2-96.2 96.2 43.1 96.2 96.2c-.1 53.1-43.1 96.2-96.2 96.2z"></path></g></svg></a></li>
@@ -87,35 +84,35 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 			<div class="colorlib-about">
 				<div class="colorlib-narrow-content">
 					<div class="row row-bottom-padded-md">
-						<div class="col-md-6">
-							<div class="about-img" data-animate-effect="fadeInLeft" style="background-image: url('./images/wall_art/image_original14.jpeg');">
+						<div class="col-md-6" style="margin-top: 2em;">
+							<div class="about-img" data-animate-effect="fadeInLeft" style="background-image: url('./images/who_we_are.jpeg');">
 							</div>
 						</div>
 						<div class="col-md-6" data-animate-effect="fadeInLeft">
 							<div class="about-desc">
 								<span class="heading-meta">Welcome</span>
-								<h2 class="colorlib-heading">Who we are</h2>
-								<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+								<h2 class="colorlib-heading" style="margin-bottom: 1em;">Who we are</h2>
+								<p>In the heart of Letojanni Sicily, steps away from Taormina, Art Leone is an art atelier that is now a point of reference in the first Sicilian tourist hub and an iconic location in Sicily. In love with the Baroque and Sicilian art, Angela and her husband Vincenzo have given vent to their passion for art through a long series of travels and meetings with international artists, in a path that has led them to carefully select special pieces that radiate deep emotions and timeless beauty. </p>
+								<p>The art atelier has already become an unmissable stop for many tourists on holiday in Sicily, but also a precious opportunity for companies that want to promote the great beauty of this territory throughout the world and are looking for works that best synthesize everything that is Sicilian identity and the global meeting of cultures and civilizations.</p>
+								<p>Art Leone is an enchanted refuge for creative souls and art lovers. Between canvases and sculptures with unusual shapes, every detail tells a story, every work is imagination that invites you to explore life, to investigate the secrets of its most intimate aspects.</p>
 							</div>
-							<div class="row padding">
+							<div class="row padding" style="padding-top: 0px">
+								<div class="col-md-5 col-sm-5 no-gutters " data-animate-effect="fadeInLeft">
+									<div class="steps active">
+										<p class="icon"><span><i class="icon-check"></i></span></p>
+										<h3>Carefully selected local <br>international art</h3>
+									</div>
+								</div>
+								<div class="col-md-3 col-sm-3 no-gutters " data-animate-effect="fadeInLeft">
+									<div class="steps active">
+										<p class="icon"><span><i class="icon-check"></i></span></p>
+										<h3>Modern &  <br>Antique</h3>
+									</div>
+								</div>
 								<div class="col-md-4 col-sm-4 no-gutters " data-animate-effect="fadeInLeft">
 									<div class="steps active">
 										<p class="icon"><span><i class="icon-check"></i></span></p>
-										<h3>We are <br>pasionate</h3>
-									</div>
-								</div>
-								<div class="col-md-4 col-sm-4 no-gutters " data-animate-effect="fadeInLeft">
-									<div class="steps">
-										<p class="icon"><span><i class="icon-check"></i></span></p>
-										<h3>Honest <br>Dependable</h3>
-									</div>
-								</div>
-								<div class="col-md-4 col-sm-4 no-gutters " data-animate-effect="fadeInLeft">
-									<div class="steps">
-										<p class="icon"><span><i class="icon-check"></i></span></p>
-										<h3>Always <br>Improving</h3>
+										<h3>Ceramics, Paintings <br>& Sculptures</h3>
 									</div>
 								</div>
 							</div>
@@ -123,13 +120,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					</div>
 					<div class="row">
 						<div class="col-md-4 " data-animate-effect="fadeInLeft">
-							<h2 class="colorlib-heading">History</h2>
-							<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+							<h2 class="colorlib-heading">Discover us!</h2>
+							<p>Welcome to Art Leone! Explore the enchanting beauty of Sicily through captivating reels and photos showcasing Letojanni and Taormina. Our page highlights stunning landscapes, cultural richness, and artistic spirit. Follow us for a visual feast of Sicily’s crystal-clear waters, charming streets, and breathtaking views, inspiring travel enthusiasts and art lovers alike.</p>
 						</div>
 						<div class="col-md-8 " data-animate-effect="fadeInRight">
 							<div class="fancy-collapse-panel">
 								<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-									<div class="panel panel-default">
+									<a target="_blank" href="https://www.instagram.com/reel/C9XOfY4IY-3/" class="project imageContainer colorlib-feature colorlib-feature-sm" style="background-image: url(./images/promotional_video_instagram.png);">
+									</a>
+									<!-- <div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
 									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Why choose us?
@@ -143,13 +142,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 										      			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 										      		</div>
 										      		<div class="col-md-6">
-										      			<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+										      			<p>Contact us for more information on your special art piece.</p>
 										      		</div>
 										      	</div>
 									         </div>
 									    </div>
-									</div>
-									<div class="panel panel-default">
+									</div> -->
+									<!-- <div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
 									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">What we do?
@@ -158,7 +157,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Contact us for more information on your special art piece.</p>
 													<ul>
 														<li>Separated they live in Bookmarksgrove right</li>
 														<li>Separated they live in Bookmarksgrove right</li>
@@ -175,10 +174,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									    </div>
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>	
+									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Contact us for more information on your special art piece.</p>	
 									        </div>
 									    </div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
@@ -195,7 +194,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					</div>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 " data-animate-effect="fadeInLeft">
-							<p class="colorlib-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p class="colorlib-lead">Contact us for more information on your special art piece.</p>
 							<p><a href="contact.html" class="btn btn-primary btn-learn">Contact me!</a></p>
 						</div>
 						
