--- a/sculptures.html
+++ b/sculptures.html
@@ -70,9 +70,6 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> Distributed by: <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> <span>Demo Images: <a href="http://nothingtochance.co/" target="_blank">nothingtochance.co</a></span></small></p>
 				<ul>
 					<li><a target="_blank" title="Facebook" href="https://www.facebook.com/profile.php?id=61560947136736&mibextid=ZbWKwL"><i class="icon-facebook2"></i></a></li>
 					<li style="position: relative; top:5px; margin-right: 3px;"><a title="Trip Advisor" target="_blank" href="https://www.tripadvisor.com/Attraction_Review-g227662-d27967056-Reviews-Art_Leone-Letojanni_Province_of_Messina_Sicily.html"><svg style="width: 25px;" viewBox="0 -96 512.2 512.2" id="Layer_2" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><style>.st0{fill:#ffffff65}</style><path class="st0" d="M128.2 127.9C92.7 127.9 64 156.6 64 192c0 35.4 28.7 64.1 64.1 64.1 35.4 0 64.1-28.7 64.1-64.1.1-35.4-28.6-64.1-64-64.1zm0 110c-25.3 0-45.9-20.5-45.9-45.9s20.5-45.9 45.9-45.9S174 166.7 174 192s-20.5 45.9-45.8 45.9z"></path><circle class="st0" cx="128.4" cy="191.9" r="31.9"></circle><path class="st0" d="M384.2 127.9c-35.4 0-64.1 28.7-64.1 64.1 0 35.4 28.7 64.1 64.1 64.1 35.4 0 64.1-28.7 64.1-64.1 0-35.4-28.7-64.1-64.1-64.1zm0 110c-25.3 0-45.9-20.5-45.9-45.9s20.5-45.9 45.9-45.9S430 166.7 430 192s-20.5 45.9-45.8 45.9z"></path><circle class="st0" cx="384.4" cy="191.9" r="31.9"></circle><path class="st0" d="M474.4 101.2l37.7-37.4h-76.4C392.9 29 321.8 0 255.9 0c-66 0-136.5 29-179.3 63.8H0l37.7 37.4C14.4 124.4 0 156.5 0 192c0 70.8 57.4 128.2 128.2 128.2 32.5 0 62.2-12.1 84.8-32.1l43.4 31.9 42.9-31.2-.5-1.2c22.7 20.2 52.5 32.5 85.3 32.5 70.8 0 128.2-57.4 128.2-128.2-.1-35.4-14.6-67.5-37.9-90.7zM368 64.8c-60.7 7.6-108.3 57.6-111.9 119.5-3.7-62-51.4-112.1-112.3-119.5 30.6-22 69.6-32.8 112.1-32.8S337.4 42.8 368 64.8zM128.2 288.2C75 288.2 32 245.1 32 192s43.1-96.2 96.2-96.2 96.2 43.1 96.2 96.2c-.1 53.1-43.1 96.2-96.2 96.2zm256 0c-53.1 0-96.2-43.1-96.2-96.2s43.1-96.2 96.2-96.2 96.2 43.1 96.2 96.2c-.1 53.1-43.1 96.2-96.2 96.2z"></path></g></svg></a></li>
@@ -86,16 +83,23 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 			<div class="colorlib-work">
 				<div class="colorlib-narrow-content">
 					<div class="row">
-						<div class="col-md-9" data-animate-effect="fadeInLeft">
+						<div class="col-md-6" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">Sculptures</span>
 							<h2 class="colorlib-heading">Our Work</h2>
-							<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+							<p>Our large variety of carefully selected sculptures take you on a journey from the past to the present and catapult you into the future with their unique shapes, techniques and textures. </p>
+							<p>From high end antique pieces to modern and futuristic works of art, you will surely find a breathtaking piece to call your own.</p>
 						</div>
-						<div class="col-md-3" data-animate-effect="fadeInLeft" style="padding-top: 50px;">
-							<div class="project imageContainer" onclick="showImage('./images/sculptures/image_original1.jpg')" style="background-image: url(./images/sculptures/image1.jpg);">
+						<div class="col-md-6" data-animate-effect="fadeInLeft" style="padding-top: 50px;">
+							<div class="project imageContainer">
+								<div class="sliderImage">
+									<div class="slidesImage">
+										<div class="slideImage" onclick="showImage('./images/sculptures/image_original1.jpg')" style="background-image: url(./images/sculptures/image1.jpg); display: block;"></div>
+									</div>
+									<!-- <button class="prevImgSlider" onclick="changeSlide(-1, this)">&#10094;</button>
+									<button class="nextImgSlider" onclick="changeSlide(1, this)">&#10095;</button> -->
+								</div>
 								<div class="title">
-									<h4>Design 1</h4>
+									<h4>Antique Angel Candleholder (period 1700’s)</h4>
 								</div>
 							</div>
 						</div>
@@ -114,7 +118,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					</div>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<p class="colorlib-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p class="colorlib-lead">Contact us for more information on your special art piece.</p>
 							<p><a href="contact.html" class="btn btn-primary btn-learn">Contact me!</a></p>
 						</div>
 						
