--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 			<img class="logoImageNavBar" src="./images/Logo/logo_name.png">
 		</div>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
-			<h1 id="colorlib-logo"><a href="index.html"><img class="logoImage" src="./images/Logo/marchio bianco@crop.png"></a></h1>
+			<h1 id="colorlib-logo"><a href="index.html"><img class="logoImage" src="./images/Logo/marchio color@2x.png"></a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -74,9 +74,9 @@
 
 			<div class="colorlib-footer">
 				<ul>
-					<li><a target="_blank" title="Facebook" href="https://www.facebook.com/profile.php?id=61560947136736&mibextid=ZbWKwL"><i class="icon-facebook2"></i></a></li>
-					<li style="position: relative; top:5px; margin-right: 3px;"><a title="Trip Advisor" target="_blank" href="https://www.tripadvisor.com/Attraction_Review-g227662-d27967056-Reviews-Art_Leone-Letojanni_Province_of_Messina_Sicily.html"><svg style="width: 25px;" viewBox="0 -96 512.2 512.2" id="Layer_2" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><style>.st0{fill:#ffffff65}</style><path class="st0" d="M128.2 127.9C92.7 127.9 64 156.6 64 192c0 35.4 28.7 64.1 64.1 64.1 35.4 0 64.1-28.7 64.1-64.1.1-35.4-28.6-64.1-64-64.1zm0 110c-25.3 0-45.9-20.5-45.9-45.9s20.5-45.9 45.9-45.9S174 166.7 174 192s-20.5 45.9-45.8 45.9z"></path><circle class="st0" cx="128.4" cy="191.9" r="31.9"></circle><path class="st0" d="M384.2 127.9c-35.4 0-64.1 28.7-64.1 64.1 0 35.4 28.7 64.1 64.1 64.1 35.4 0 64.1-28.7 64.1-64.1 0-35.4-28.7-64.1-64.1-64.1zm0 110c-25.3 0-45.9-20.5-45.9-45.9s20.5-45.9 45.9-45.9S430 166.7 430 192s-20.5 45.9-45.8 45.9z"></path><circle class="st0" cx="384.4" cy="191.9" r="31.9"></circle><path class="st0" d="M474.4 101.2l37.7-37.4h-76.4C392.9 29 321.8 0 255.9 0c-66 0-136.5 29-179.3 63.8H0l37.7 37.4C14.4 124.4 0 156.5 0 192c0 70.8 57.4 128.2 128.2 128.2 32.5 0 62.2-12.1 84.8-32.1l43.4 31.9 42.9-31.2-.5-1.2c22.7 20.2 52.5 32.5 85.3 32.5 70.8 0 128.2-57.4 128.2-128.2-.1-35.4-14.6-67.5-37.9-90.7zM368 64.8c-60.7 7.6-108.3 57.6-111.9 119.5-3.7-62-51.4-112.1-112.3-119.5 30.6-22 69.6-32.8 112.1-32.8S337.4 42.8 368 64.8zM128.2 288.2C75 288.2 32 245.1 32 192s43.1-96.2 96.2-96.2 96.2 43.1 96.2 96.2c-.1 53.1-43.1 96.2-96.2 96.2zm256 0c-53.1 0-96.2-43.1-96.2-96.2s43.1-96.2 96.2-96.2 96.2 43.1 96.2 96.2c-.1 53.1-43.1 96.2-96.2 96.2z"></path></g></svg></a></li>
-					<li><a title="Instagram" target="_blank" href="https://www.instagram.com/art_leone_letojanni_taormina/"><i class="icon-instagram"></i></a></li>
+					<li><a target="_blank" title="Facebook" href="https://www.facebook.com/profile.php?id=61560947136736&mibextid=ZbWKwL"><i style="font-size: 22px;" class="icon-facebook2"></i></a></li>
+					<li style="position: relative; top:7px; margin-right: 3px;"><a title="Trip Advisor" target="_blank" href="https://www.tripadvisor.com/Attraction_Review-g227662-d27967056-Reviews-Art_Leone-Letojanni_Province_of_Messina_Sicily.html"><svg style="width: 35px;" viewBox="0 -96 512.2 512.2" id="Layer_2" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><style>.st0{fill:#ffffff65}</style><path class="st0" d="M128.2 127.9C92.7 127.9 64 156.6 64 192c0 35.4 28.7 64.1 64.1 64.1 35.4 0 64.1-28.7 64.1-64.1.1-35.4-28.6-64.1-64-64.1zm0 110c-25.3 0-45.9-20.5-45.9-45.9s20.5-45.9 45.9-45.9S174 166.7 174 192s-20.5 45.9-45.8 45.9z"></path><circle class="st0" cx="128.4" cy="191.9" r="31.9"></circle><path class="st0" d="M384.2 127.9c-35.4 0-64.1 28.7-64.1 64.1 0 35.4 28.7 64.1 64.1 64.1 35.4 0 64.1-28.7 64.1-64.1 0-35.4-28.7-64.1-64.1-64.1zm0 110c-25.3 0-45.9-20.5-45.9-45.9s20.5-45.9 45.9-45.9S430 166.7 430 192s-20.5 45.9-45.8 45.9z"></path><circle class="st0" cx="384.4" cy="191.9" r="31.9"></circle><path class="st0" d="M474.4 101.2l37.7-37.4h-76.4C392.9 29 321.8 0 255.9 0c-66 0-136.5 29-179.3 63.8H0l37.7 37.4C14.4 124.4 0 156.5 0 192c0 70.8 57.4 128.2 128.2 128.2 32.5 0 62.2-12.1 84.8-32.1l43.4 31.9 42.9-31.2-.5-1.2c22.7 20.2 52.5 32.5 85.3 32.5 70.8 0 128.2-57.4 128.2-128.2-.1-35.4-14.6-67.5-37.9-90.7zM368 64.8c-60.7 7.6-108.3 57.6-111.9 119.5-3.7-62-51.4-112.1-112.3-119.5 30.6-22 69.6-32.8 112.1-32.8S337.4 42.8 368 64.8zM128.2 288.2C75 288.2 32 245.1 32 192s43.1-96.2 96.2-96.2 96.2 43.1 96.2 96.2c-.1 53.1-43.1 96.2-96.2 96.2zm256 0c-53.1 0-96.2-43.1-96.2-96.2s43.1-96.2 96.2-96.2 96.2 43.1 96.2 96.2c-.1 53.1-43.1 96.2-96.2 96.2z"></path></g></svg></a></li>
+					<li><a title="Instagram" target="_blank" href="https://www.instagram.com/art_leone_letojanni_taormina/"><i style="font-size: 22px;" class="icon-instagram"></i></a></li>
 				</ul>
 			</div>
 
@@ -150,7 +150,7 @@
 	<script src="js/jquery.countTo.js"></script>
 	<!-- Google Map -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg"></script>
-	<script src="js/google_map.js"></script>
+	<!-- <script src="js/google_map.js"></script> -->
 
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
